--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,44 @@
 body {
-    font-family: "Roboto", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    color: gray;
+  font-family: "Roboto", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" "Cinzel";
+  color: gray;
+  height: 2000px;
 }
-
 #img {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
-.list>li {
-    display: inline-block;
-    margin-top: 20px;
-    left: 50%;
-    padding-left: 10px;
-    font-size: 1rem;
-    font-weight: 300;
-    cursor: pointer;    
-    list-style: none;
-    text-transform: uppercase;
+#texts {
+  margin-top: 138px;
+}
+#texts h2 {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  font-family: "Cinzel";
+}
+#texts p{
+  text-align: center;
+}
+#color{
+    color: #930077 !important;
+    
+}
+
+
+.list > li {
+  display: inline-block;
+  align-items: center;
+  margin-top: 30px;
+  padding-left: 27px;
+  font-size: 1rem;
+  font-weight: 300;
+  cursor: pointer;
+  list-style: none;
+  text-transform: uppercase;
+}
+.list {
+  display: flex;
+  justify-content: center;
 }
