--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,38 @@
+@font-face {
+  font-family: 'icomoon';
+  src:  url('/fonts/icomoon.eot?10si43');
+  src:  url('/fonts/icomoon.eot?10si43#iefix') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?10si43') format('truetype'),
+    url('/fonts/icomoon.woff?10si43') format('woff'),
+    url('/fonts/icomoon.svg?10si43#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
 body {
   font-family: "Roboto", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
     "Noto Color Emoji" "Cinzel";
-  color: gray;
-  height: 2000px;
+  /* color: gray; */
+  height: 4000px;
 }
+
 #img {
   margin-top: 20px;
 }
@@ -46,31 +74,52 @@ body {
   justify-content: center;
 }
 
-.flexbtl{
+.flexbtl {
   display: flex;
   flex-wrap: nowrap;
-  margin-top:  94px;
+  margin-top: 94px;
 }
 
 .bootles {
-  background-color: rgb(204, 180, 180);
+  position: relative;
   box-sizing: border-box;
   display: inline-block;
-  padding-left: 30px; /* Gutter */
+  padding-left: 30px;
   align-items: center;
 }
+.bootles > p{
+  /* position: absolute; */
+margin-top: 30px;
+}
+
+
+.bootles:hover .hoverDiv {
+  width: 330px;
+  height: 200px;
+  background-color: aqua;
+  opacity: 1;
+    visibility: visible;
+}
+.hoverDiv{
+  position: absolute;
+  width: 330px;
+  height: 200px;
+  background-color: aqua;
+  opacity: 0;
+  visibility: hidden;
+  top: 50px;
+  transform: translate(-50%);
+}
+
 .image-fluid {
   max-width: 100%;
   height: auto;
 }
 
-.bootles:hover {
-}
-
-.bootles::after{
+.bootles::after {
   content: "";
   display: block;
-  background: #12406e;
+  background: #f3f4f5;
   top: 20%;
   bottom: 0;
   left: 0;
@@ -78,3 +127,50 @@ body {
   position: absolute;
   z-index: -1;
 }
+
+.bcg {
+  background-image: url("/img/img_2.jpg");
+  width: 100%;
+  height: 500px;
+  margin-top: 120px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+
+}
+.bcg h2{
+  font-size: 5rem;
+  font-weight: 300;
+  color: #fff;
+  font-family: "Montserrat";
+  font-weight: 900;
+  text-transform: uppercase;
+}
+.bcg span {
+  font-family: "Cinzel";
+  color: #fff;
+  font-size: 1.5rem;
+}
+.girl img{
+  width: 80px !important;
+  border: 4px solid #930077;
+  margin-bottom: 30px;
+  border-radius: 50%;
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+/* .bcg ::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  right: 0;
+  background: #222;
+  opacity: 0.3;
+  border-bottom-right-radius: 0px;
+  background-size: cover;
+  background-position: center;
+} */
