--- a/css/home.css
+++ b/css/home.css
@@ -1,16 +1,12 @@
 @font-face {
   font-family: "icomoon";
   src: url("/fonts/icomoon.eot?10si43");
-  src: url("/fonts/icomoon.eot?10si43#iefix") format("embedded-opentype"),
-    url("/fonts/icomoon.ttf?10si43") format("truetype"),
-    url("/fonts/icomoon.woff?10si43") format("woff"),
-    url("/fonts/icomoon.svg?10si43#icomoon") format("svg");
+  src: url("/fonts/icomoon.eot?10si43#iefix") format("embedded-opentype"), url("/fonts/icomoon.ttf?10si43") format("truetype"), url("/fonts/icomoon.woff?10si43") format("woff"), url("/fonts/icomoon.svg?10si43#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "icomoon" !important;
   speak: none;
@@ -19,22 +15,21 @@
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  font-family: "Cinzel" "Roboto", "Segoe UI", Roboto, "Helvetica Neue", Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
+  font-family: "Cinzel" "Roboto", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* color: gray; */
-  height: 4000px;
+  height: 4300px;
 }
+
 .huge-div {
   background-color: #f8f9fa !important;
 }
+
 .main-section {
   margin-top: 130px;
 }
@@ -51,6 +46,7 @@ h5 {
   margin-top: 200px !important;
   margin-bottom: 100px !important;
 }
+
 .texts h2 {
   text-align: center;
   font-size: 2rem;
@@ -58,9 +54,11 @@ h5 {
   text-transform: uppercase;
   font-family: "Cinzel";
 }
+
 .texts p {
   text-align: center;
 }
+
 #color {
   color: #930077 !important;
 }
@@ -69,7 +67,7 @@ h5 {
   margin-top: 30px;
 }
 
-.list > li {
+.list>li {
   display: inline-block;
   align-items: center;
   margin-top: 30px;
@@ -82,7 +80,7 @@ h5 {
   text-transform: uppercase;
 }
 
-.list > li > a {
+.list>li>a {
   text-decoration: none !important;
   color: gray;
 }
@@ -91,6 +89,23 @@ h5 {
   display: flex;
   justify-content: center;
 }
+#coruselHero{
+  position: relative;
+}
+
+/* .center h2{
+  font-size: 5rem;
+  font-weight: 300;
+  color: #fff;
+  font-family: "Montserrat";
+  font-weight: 900;
+  text-transform: uppercase;
+} 
+.center  span{
+  font-family: "Cinzel";
+  color: #fff;
+  font-size: 1.5rem;
+} */
 
 .flexbtl {
   display: flex;
@@ -107,29 +122,32 @@ h5 {
   padding-left: 30px;
   align-items: center;
 }
-.bootles > p {
+
+.bootles>p {
   /* position: absolute; */
   margin-top: 30px;
 }
 
 .bootles:hover .hoverDiv {
-  width: 330px;
-  height: 200px;
+  /* width: 330px; */
+  /* height: 200px; */
   background-color: #fff;
   opacity: 1;
-  visibility: visible;
+  /* visibility: visible; */
 }
+
 .hoverDiv {
   position: absolute;
   width: 330px;
-  height: 200px;
+  height: 150px;
   /* background-color: #fff; */
   opacity: 0;
-  visibility: hidden;
+  /* visibility: hidden; */
   text-align: center !important;
   padding-bottom: 1.5rem !important;
-  top: 190px;
-  transform: translate(-1%);
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .image-fluid {
@@ -150,6 +168,7 @@ h5 {
 }
 
 .bcg {
+  position: relative;
   background-image: url("/img/img_2.jpg");
   width: 100%;
   height: 500px;
@@ -159,6 +178,7 @@ h5 {
   background-position: center;
   background-attachment: fixed;
 }
+
 .bcg h2 {
   font-size: 5rem;
   font-weight: 300;
@@ -167,11 +187,24 @@ h5 {
   font-weight: 900;
   text-transform: uppercase;
 }
+
 .bcg span {
   font-family: "Cinzel";
   color: #fff;
   font-size: 1.5rem;
 }
+
+.overlay {
+  content: "     ";
+  position: absolute;
+  /* z-index: 1; */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.514);
+}
+
 .girl img {
   display: block;
   width: 80px !important;
@@ -182,12 +215,14 @@ h5 {
   margin-left: auto !important;
   margin-right: auto !important;
 }
+
 .girl {
   font-size: 20px;
   font-family: "Cinzel";
   text-align: center;
   text-transform: none !important;
 }
+
 .small {
   font-size: 80%;
   font-weight: 400;
@@ -195,34 +230,80 @@ h5 {
   color: #930077 !important;
   font-family: "Cinzel";
 }
+
 .posts {
   font-size: 1rem;
-  margin-bottom: 30px;
+  margin-bottom: 70px;
   color: gray;
-  font-family:"Cinzel" ;
+  font-family: "Cinzel";
 }
-.posts > h2 {
+
+.posts>h2 {
   margin-top: 20px;
   text-align: center;
   color: rgb(92, 89, 89);
   text-transform: uppercase;
   font-size: 20px;
 }
-.d-block{
+
+.d-block {
   display: block!important;
 }
-.post-meta{
+
+.post-meta {
   font-size: .8rem;
 }
-.d-block > a {
+
+.d-block>a {
   color: black;
   text-decoration: none;
 }
 
-/* .lorem{
-  display: block;
-  width: 30%;
-} */
+.footer {
+  font-size: .85rem;
+  text-align: center;
+  padding: 7rem 0;
+  border-top: 1px solid #efefef;
+}
+
+.social-icons {
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.social-icons a>span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.social-icons a {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #930077;
+  color: #fff;
+  top: 0;
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease;
+}
+
+.social-icons a>i {
+  position: absolute;
+  top: 50%;
+}
+
+.social-icons a:hover {
+  background: #000;
+  color: #fff;
+  top: -5px;
+}
 
 /* .bcg ::before {
   content: "";
@@ -236,4 +317,22 @@ h5 {
   border-bottom-right-radius: 0px;
   background-size: cover;
   background-position: center;
+} */
+
+.owl-nav {
+  margin: 10px 0 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+span[class^="icon-arrow"] {
+  margin-right: 10px;
+  background: gray;
+  display: flex;
+  width: 20px;
+  height: 4px;
+}
+/* 
+button[class^="owl-"]:active {
+  border: 2px solid red;
 } */
