--- a/css/home.css
+++ b/css/home.css
@@ -26,6 +26,13 @@ body {
   height: 4300px;
 }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+}
+
 .huge-div {
   background-color: #f8f9fa !important;
 }
