--- a/css/contact.css
+++ b/css/contact.css
@@ -337,3 +337,6 @@ textarea.form-control {
     background-size: cover;
     background-position: center;
   } */
+  #heart{
+      color: red;
+  }
