--- a/css/shop.css
+++ b/css/shop.css
@@ -1,183 +1,96 @@
 body {
     font-family: "Cinzel" "Roboto", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     /* color: gray; */
-    height: 2700px;
-    margin 0;
-    padding 0   ;
-}
-
-
-.fixed {
+    height: 2000px;
+  }
+  #fixed{
+      width: 100%;
+      background-color: #fff;
+  }
+  
+  .fixed {
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
 }
-
-.col-4 {
-    padding-right: 50px;
-}
-
-.col-4  h2{
-    margin-bottom: 5px;
-    text-transform: uppercase;
-    font-family: "Cinzel"!important;
-    font-size: 18px;
-    color: #25262a;
-    letter-spacing: .05em;
-}
-
-
-#truck>i {
-    position: absolute;
-    left: -64px;
-    top: -1px;
-    font-size: 50px;
-    display: inline-block;
-    color: #930077!important;
-}
-#return>i {
-    position: absolute;
-    left: -64px;
-    top: -1px;
-    font-size: 50px;
-    display: inline-block;
-    color: #930077!important;
-}
-
-#support {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #930077!important;
-}
-
-#support>i {
-    position: absolute;
-    align-content: center;
-    position: absolute;
-    left: -50px;
-    top: -5px;
-    font-size: 49px;
-    display: inline-block;
-    color: #930077;
-}
-
-.huge-div {
+  
+  .huge-div {
     background-color: #f8f9fa !important;
-    width: 100%;
-    padding: 30px;
-    margin-top: 100px;
-}
-
-.huge-div h2 {
-    margin-bottom: 60px;
-    text-transform: uppercase;
-    font-family: "Cinzel"!important;
-}
-
-.about {
-    margin-bottom: 60px;
-}
-
-.about h2 {
-    margin-bottom: 60px;
-    text-transform: uppercase;
-    font-family: "Cinzel"!important;
-}
-
-.main-section {
+  }
+  
+  .main-section {
     margin-top: 130px;
-}
-
-.partOf {
-    margin: 70px 0 70px 0;
-}
-
-h5 {
+  }
+  
+  h5 {
     margin-top: 10px;
-}
-
-#img {
+  }
+  
+  #img {
     margin-top: 20px;
-}
-
-.texts {
-    margin-top: 200px !important;
-    margin-bottom: 100px !important;
-}
-
-.texts h2 {
+  }
+  
+  .texts {
+    margin-top: 60px !important;
+    margin-bottom: 50px !important;
+  }
+  
+  .texts h2 {
     text-align: center;
     font-size: 2rem;
     font-weight: 400;
     text-transform: uppercase;
     font-family: "Cinzel";
-}
-
-.texts p {
+  }
+  
+  .texts p {
     text-align: center;
-}
-
-#color {
+  }
+  
+  #color {
     color: #930077 !important;
-}
-
-.container {
+  }
+  
+  .container {
     margin-top: 30px;
-}
+  }
 
-.list>li {
-    display: inline-block;
+  .list {
+    display: flex;
+    justify-content: center;
+  }
+ 
+  .list>li {
+    display: flex;
     align-items: center;
-    margin-top: 5px;
-    padding-left: 27px;
+    margin-top: 30px;
+    padding-left: 40px;
     font-size: 0.8rem;
     font-weight: 400;
     cursor: pointer;
     list-style: none;
     /* text-decoration: none !important; */
     text-transform: uppercase;
-}
-
-.list li a {
+  }
+   
+  .list>li>a {
     text-decoration: none !important;
     color: gray;
-}
-
-.list {
-    display: flex;
-    justify-content: center;
-    margin-bottom: -10px;
-    /* background-color: black; */
-}
-
-/* #coruselHero {
+  }
+  #coruselHero{
     position: relative;
-} */
+  }
+  
 
-/* .center h2{
-    font-size: 5rem;
-    font-weight: 300;
-    color: #fff;
-    font-family: "Montserrat";
-    font-weight: 900;
-    text-transform: uppercase;
-  } 
-  .center  span{
-    font-family: "Cinzel";
-    color: #fff;
-    font-size: 1.5rem;
-  } */
-
-.flexbtl {
+  
+  .flexbtl {
     display: flex;
     flex-wrap: nowrap;
     margin-top: 94px;
-}
-
-.bootles {
+  }
+  
+  .bootles {
     position: relative;
     box-sizing: border-box;
     display: inline-block;
@@ -185,27 +98,71 @@ h5 {
     margin-top: 50px;
     padding-left: 30px;
     align-items: center;
-}
-
-.bootles>p {
+  }
+  
+  .bootles>p {
     /* position: absolute; */
     margin-top: 30px;
-}
-
-.bootles:hover .hoverDiv {
+  }
+  
+  .bootles:hover .hoverDiv {
     /* width: 330px; */
     /* height: 200px; */
     background-color: #fff;
     opacity: 1;
     /* visibility: visible; */
+  }
+  
+  .hoverDiv {
+    position: absolute;
+    width: 330px;
+    height: 150px;
+    /* background-color: #fff; */
+    opacity: 0;
+    /* visibility: hidden; */
+    text-align: center !important;
+    padding-bottom: 1.5rem !important;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%);
+  }
+  .hoverDiv>span{
+      color: #8d1577;
+  }
+  .stars{
+      position: relative;
+  }
+  .stars > span> i{
+   color: gold;
 }
+  
+ .cart{
+     position: absolute;
+    text-align: center !important;
+     left: 50%;
+     top: 65%;
+     transform: translate(-50%);
+     width: 220px;
+     height: 40px;
+     background-color: #8d1577;
+ }
+ .cart > a{
+     text-decoration: none;
+     color: #efefef;
+     padding-top: 20px;
+ }
+ .cart > a > span > i {
+    color: #efefef;
+    margin-right: 20px;
 
-.image-fluid {
+}
+  
+  .image-fluid {
     max-width: 100%;
     height: auto;
-}
-
-.bootles::after {
+  }
+  
+  .bootles::after {
     content: "";
     display: block;
     background: #f3f4f5;
@@ -215,36 +172,36 @@ h5 {
     right: 0px;
     position: absolute;
     z-index: -1;
-}
-
-.bcg {
+  }
+  
+  .bcg {
     position: relative;
     background-image: url("/img/img_2.jpg");
     width: 100%;
-    height: 400px;
-    margin-top: 1px;
+    height: 500px;
+    margin-top: 120px;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-}
-
-.bcg h2 {
+  }
+  
+  .bcg h2 {
     font-size: 5rem;
     font-weight: 300;
     color: #fff;
     font-family: "Montserrat";
     font-weight: 900;
     text-transform: uppercase;
-}
-
-.bcg span {
+  }
+  
+  .bcg span {
     font-family: "Cinzel";
     color: #fff;
     font-size: 1.5rem;
-}
-
-.overlay {
+  }
+  
+  .overlay {
     content: "     ";
     position: absolute;
     /* z-index: 1; */
@@ -252,10 +209,10 @@ h5 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.342);
-}
-
-.girl img {
+    background: rgba(0, 0, 0, 0.514);
+  }
+  
+  .girl img {
     display: block;
     width: 80px !important;
     border: 4px solid #930077;
@@ -264,73 +221,73 @@ h5 {
     /* vertical-align: middle; */
     margin-left: auto !important;
     margin-right: auto !important;
-}
-
-.girl {
+  }
+  
+  .girl {
     font-size: 20px;
     font-family: "Cinzel";
     text-align: center;
     text-transform: none !important;
-}
-
-.small {
+  }
+  
+  .small {
     font-size: 80%;
     font-weight: 400;
     text-transform: uppercase;
     color: #930077 !important;
     font-family: "Cinzel";
-}
-
-.posts {
+  }
+  
+  .posts {
     font-size: 1rem;
     margin-bottom: 70px;
     color: gray;
     font-family: "Cinzel";
-}
-
-.posts>h2 {
+  }
+  
+  .posts>h2 {
     margin-top: 20px;
     text-align: center;
     color: rgb(92, 89, 89);
     text-transform: uppercase;
     font-size: 20px;
-}
-
-.d-block {
+  }
+  
+  .d-block {
     display: block!important;
-}
-
-.post-meta {
+  }
+  
+  .post-meta {
     font-size: .8rem;
-}
-
-.d-block>a {
+  }
+  
+  .d-block>a {
     color: black;
     text-decoration: none;
-}
-
-.footer {
+  }
+  
+  .footer {
     font-size: .85rem;
     text-align: center;
     padding: 7rem 0;
     border-top: 1px solid #efefef;
-}
-
-.social-icons {
+  }
+  
+  .social-icons {
     text-align: center;
     margin-bottom: 50px;
-}
-
-.social-icons a>span {
+  }
+  
+  .social-icons a>span {
     position: absolute;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-}
-
-.social-icons a {
+  }
+  
+  .social-icons a {
     position: relative;
     display: inline-block;
     width: 40px;
@@ -342,46 +299,33 @@ h5 {
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease;
-}
-
-.social-icons a>i {
+  }
+  
+  .social-icons a>i {
     position: absolute;
     top: 50%;
-}
-
-.social-icons a:hover {
+  }
+  
+  .social-icons a:hover {
     background: #000;
     color: #fff;
     top: -5px;
-}
-
-/* .bcg ::before {
-    content: "";
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    right: 0;
-    background: #222;
-    opacity: 0.3;
-    border-bottom-right-radius: 0px;
-    background-size: cover;
-    background-position: center;
-  } */
-
-.owl-nav {
+  }
+  
+  
+  .owl-nav {
     margin: 10px 0 0 0;
     display: flex;
     justify-content: center;
-}
-
-span[class^="icon-arrow"] {
+  }
+  
+  span[class^="icon-arrow"] {
     margin-right: 10px;
     background: gray;
     display: flex;
     width: 20px;
     height: 4px;
-}
-#heart{
+  }
+  #heart{
     color: red;
 }
