--- a/css/wines.css
+++ b/css/wines.css
@@ -36,6 +36,10 @@
     margin-bottom: 50px !important;
   }
   
+  h3{
+    font-size: 1.5rem;
+  }
+
   .texts h2 {
     text-align: center;
     font-size: 2rem;
@@ -142,7 +146,10 @@
       color: #8d1577;
   }
   .stars{
-      position: relative;
+      position: absolute;
+      top: 60px;
+      left: 50%;
+      transform: translate(-50%)
   }
   .stars > span> i{
    color: gold;
@@ -351,6 +358,9 @@
     width: 20px;
     height: 4px;
   }
+  #heart{
+    color: red;
+}
   /* 
   button[class^="owl-"]:active {
     border: 2px solid red;
